NOTE entity field encryption changes: change default config to use PBEWithHmacSHA256AndAES_128 instead of PBEWithMD5AndDES with alternate decrypt (fail fallback) settings for the old mode, and add a entity_ds_crypt_pass_old property with alt decrypt settings for both the old and new crypt algos; in EntityJavaUtil.enDeCrypt() change to support init vector so new algo can be used, generated secure random and saved as a colon separated prefix with each value meaning the text stored in the DB is in a different format, and while making that change move from hex to URL Base64 encoding to somewhat compensate for the extra space required for the init vector (128bit for the AES block size so 24 chars base64 encoded); this change is backward compatible and in addition to improving encrypted entity field security allows for crypt pass migration